# champions-league-fantasy-ai

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  deploy_to_github.py  example_usage.py  pyproject.toml  quick_start.py  setup.py
.github/workflows/: ci.yml
knowledge/: champions_league_fantasy_rules.md  fantasy_strategies.md  top_champions_league_teams.md  user_preference.txt
output/: .gitkeep
src/fpl_expert/: crew.py  main.py
src/fpl_expert/config/: agents.yaml  tasks.yaml
src/fpl_expert/tools/: custom_tool.py
