[project]
name = "champions-league-fantasy-ai"
version = "1.0.0"
description = "A sophisticated multi-agent AI system for Champions League Fantasy Football using CrewAI and DeepSeek models"
authors = [{ name = "Aaron Bro", email = "aaron@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
keywords = ["fantasy-football", "champions-league", "ai", "crewai", "deepseek", "football", "sports-analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
fpl_expert = "fpl_expert.main:run"
run_crew = "fpl_expert.main:run"
train = "fpl_expert.main:train"
replay = "fpl_expert.main:replay"
test = "fpl_expert.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
